# zelda-sdl3

./: .gitignore  CMakeLists.txt  README.md
docs/: emulator-dump-workflow.md  mesen-source-automation.md  reverse-engineering-plan.md
extracted/analysis/: bank_06_report.json  entity_candidates.json  room_candidates.json  summary.json  text_candidates.json
extracted/rooms/: door_room_full_16.room  first_room_bg0.room  first_room_bg1000.room  first_room_from_mesen.room  first_room_full.room  first_room_full_16.room  first_room_full_16_b.room  left_room_full_16.room  prototype_overworld.room  sample_chr_import.room  sample_from_command.room  sample_import.room  sample_oam_16_import.room  sample_oam_import.room  sample_verify.room  top_room_full_16.room
src/: main.cpp
src/engine/: Application.cpp  Application.hpp
src/game/: Game.cpp  Game.hpp  RoomAsset.cpp  RoomAsset.hpp
tools/: import_mesen_scene.py  nes_rom_inspector.py
tools/mesen/: nes_scene_dump.lua
